--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,12 @@ target/
 ### IntelliJ IDEA ###
 *.idea
 .idea/modules.xml
+.ideaencodings.xml
 .idea/jarRepositories.xml
+.idea/misc.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+.idea/workspace.xml
 .idea/compiler.xml
 .idea/libraries/
 *.iws
